fixes certain data source links being unclickable because of overlapping titles

--- a/datausa/assets/scss/elements/_profile.scss
+++ b/datausa/assets/scss/elements/_profile.scss
@@ -451,6 +451,8 @@ body.profile, body.map, body.story {
         color: #888;
         border-bottom: 1px solid transparent;
         @include transition(all 0.15s);
+        position: relative;
+        z-index: 1;
         &:hover {
           border-color: #888;
         }
